--- a/settings.gradle
+++ b/settings.gradle
@@ -4,5 +4,6 @@ rootProject.name = 'spring'
 include '20_spring-framework:100_IOC:demo'
 findProject(':20_spring-framework:100_IOC:demo')?.name = 'demo'
 
-
+include '50_spring-boot:400_websocket'
+findProject(':50_spring-boot:400_websocket')?.name = 'boot_websocket'
 
