--- a/50_spring-boot/400_websocket/build.gradle
+++ b/50_spring-boot/400_websocket/build.gradle
@@ -30,6 +30,9 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
     compile("org.springframework.boot:spring-boot-starter-thymeleaf")
     compile("org.springframework.boot:spring-boot-starter")
+    compile("io.projectreactor:reactor-core:2.0.4.RELEASE")
+    compile("io.projectreactor:reactor-net:2.0.4.RELEASE")
+    compile("io.netty:netty-all:4.1.2.Final")
     compile("org.webjars:webjars-locator")
     compile("org.webjars:sockjs-client:1.0.2")
     compile("org.webjars:stomp-websocket:2.3.3")
