--- a/settings.gradle
+++ b/settings.gradle
@@ -8,4 +8,6 @@ include '50_spring-boot:400_websocket'
 findProject(':50_spring-boot:400_websocket')?.name = 'boot_websocket'
 include '50_spring-boot:410_swagger'
 findProject(':50_spring-boot:410_swagger')?.name = 'boot-swagger'
+include '50_spring-boot:411_swagger'
+findProject(':50_spring-boot:411_swagger')?.name = 'boot_swagger_up'
 
